Dodata skica restorana i omoguceno pomeranje jednog stola po skici

--- a/frontend/app/views/blabla.html
+++ b/frontend/app/views/blabla.html
@@ -128,8 +128,10 @@
             <li>{{ guest.phone_number }}</li>
             <li>{{ guest.email }}</li>
         </ul>
+        <aside draggable="true" id="dragme">
+        </aside>
         <div class="panel">
-            <img src="images/skica.jpg" class="img-rounded" alt="Cinque Terre" width="750" height="500">
+            <img src="images/plan.png" class="img-rounded" alt="Cinque Terre" width="750" height="500">
         </div>
     </div>
 </div>
