--- a/frontend/app/styles/main.css
+++ b/frontend/app/styles/main.css
@@ -81,3 +81,14 @@ body {
     border-bottom: 0;
   }
 }
+
+aside {
+    position:  absolute;
+    left: 0;
+    top: 0;
+    width: 35px;
+    height: 35px;
+    background: rgba(206, 99, 6, 0.658824);
+    border: 2px  solid rgba(0,0,0,0.5);
+    border-radius: 4px; padding: 8px;
+}
