--- a/frontend/app/styles/main.css
+++ b/frontend/app/styles/main.css
@@ -43,7 +43,7 @@
 .right-side {
     border-left: 1px solid #DDD;
 }
-.bubble {
+/*.bubble {
     background: #FDAF19;
     padding: 5px 10px;
     color: #FFF;
@@ -52,7 +52,7 @@
     border-radius: 6px;
     width: 60px;
     display: inline-block;
-}
+}*/
 aside {
     position: absolute;;
     left: 0;
@@ -66,7 +66,18 @@ aside {
     color: white;
     font-weight: bold;
 }
-
 .taken {
     background-color: rgba(230,30,10,1);
 }
+.slider {
+    margin-top: 50px;
+    margin-bottom: 30px;
+    border-radius: 6px;
+    height: 2px;
+}
+.slider-wrapper {
+    padding: 15px;
+}
+/*.slider p {
+    margin-top: 10px;
+}*/
