--- a/frontend/app/styles/main.css
+++ b/frontend/app/styles/main.css
@@ -98,3 +98,11 @@ aside {
     background-color: #E61E0A;
     height: 7px;
 }
+.save-button {
+
+}
+.draggable-table {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+}
