Dodata login strana i logika za autentifikaciju na frontendu

--- a/frontend/app/views/main.html
+++ b/frontend/app/views/main.html
@@ -1,23 +1,161 @@
 <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-sm-8 text-center slider-wrapper">
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
+                    <rzslider rz-slider-model="slider.minValue"
+                        rz-slider-high="slider.maxValue"
+                        rz-slider-options="slider.options"
+                        class="slider">
+                    </rzslider>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <button class="save-button" data-ng-click="saveLayout()">Save layout</button>
+        <div id="#drag-area" class="white-area">
+            <div class="row">
 
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
+                <div class="col-xs-12 col-sm-8 text-center">
+                    <div class="panel">
+                        <img src="images/plan.png" class="img-rounded" alt="Plan" width="750" height="500">
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-4 text-center">
+                    <div class="right-side">
+                        <div class="row">
+                            <div class="col-xs-12">
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div>
+
+            <div class="panel-group" id="accordion">
+                <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+                  <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <p>
+                            21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
+                          <span class="text-right">REZERVISANO<span>
+                        </p>
+                      Pera Peric 22
+                    </h4>
+                  </div>
+                  <div id="collapse1" class="collapsed panel-collapse collapse">
+                    <div class="panel-body">
+                        <label>Telefon: </label> 0641234567
+                        <br/>
+                        <label>Email: </label> pera.peric@gmail.com
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+                  <div class="panel-heading">
+                      <h4 class="panel-title">
+                          <p>
+                              21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
+                            <span class="text-right">REZERVISANO<span>
+                          </p>
+                        Pera Peric 22
+                      </h4>
+                  </div>
+                  <div id="collapse2" class="collapsed panel-collapse collapse">
+                      <div class="panel-body">
+                          <label>Telefon: </label> 0641234567
+                          <br/>
+                          <label>Email: </label> pera.peric@gmail.com
+                      </div>
+                  </div>
+                </div>
+                <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+                  <div class="panel-heading">
+                      <h4 class="panel-title">
+                          <p>
+                              21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
+                            <span class="text-right">REZERVISANO<span>
+                          </p>
+                        Pera Peric 22
+                      </h4>
+                  </div>
+                  <div id="collapse3" class="collapsed panel-collapse collapse">
+                      <div class="panel-body">
+                          <label>Telefon: </label> 0641234567
+                          <br/>
+                          <label>Email: </label> pera.peric@gmail.com
+                      </div>
+                  </div>
+                </div>
+                <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse4">
+                  <div class="panel-heading">
+                      <h4 class="panel-title">
+                          <p>
+                              21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
+                            <span class="text-right">REZERVISANO<span>
+                          </p>
+                        Pera Peric 22
+                      </h4>
+                  </div>
+                  <div id="collapse4" class="panel-collapse collapse">
+                      <div class="panel-body">
+                          <label>Telefon: </label> 0641234567
+                          <br/>
+                          <label>Email: </label> pera.peric@gmail.com
+                      </div>
+                  </div>
+                </div>
+                <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse5">
+                  <div class="panel-heading">
+                      <h4 class="panel-title">
+                          <p>
+                              21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
+                            <span class="text-right">REZERVISANO<span>
+                          </p>
+                        Pera Peric 22
+                      </h4>
+                  </div>
+                  <div id="collapse5" class="panel-collapse collapse">
+                      <div class="panel-body">
+                          <label>Telefon: </label> 0641234567
+                          <br/>
+                          <label>Email: </label> pera.peric@gmail.com
+                      </div>
+                  </div>
+                </div>
+                <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse6">
+                  <div class="panel-heading">
+                      <h4 class="panel-title">
+                          <p>
+                              21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
+                            <span class="text-right">REZERVISANO<span>
+                          </p>
+                        Pera Peric 22
+                      </h4>
+                  </div>
+                  <div id="collapse6" class="panel-collapse collapse">
+                      <div class="panel-body">
+                          <label>Telefon: </label> 0641234567
+                          <br/>
+                          <label>Email: </label> pera.peric@gmail.com
+                      </div>
+                  </div>
+                </div>
+            </div>
+
+            <div data-ng-repeat="tab in tables | unique: 'label'">
+                <div id="{{tab.label}}-div" draggable-table on-resize="scaleIntervals($evt, $ui)" on-resizestop="saveDimensions($evt, $ui)" on-dragstop="savePosition($evt, $ui)"
+                    style="position:absolute;left:{{tab.position.left}}px;top:{{tab.position.top}}px;height:{{tab.dimensions.height}}px;width:{{tab.dimensions.width}}px;">
+                    <time-line id="{{tab.label}}-timeline" start-time="startTime" end-time="endTime" taken-intervals="tab.takenList" style="width:100%;"></time-line>
+                    <aside id="{{tab.label}}" ng-class="{'taken': tab.taken}" style="width:100%;height:100%;">
+                        <span>{{tab.label}}</span><br/>
+                        <span><i class="glyphicon glyphicon-user"></i> {{tab.seats}}</span>
+                    </aside>
+                </div>
+            </div>
+
+        </div>
+
+        </div>
+
+        </div>
+        </div>
