--- a/frontend/app/views/main.html
+++ b/frontend/app/views/main.html
@@ -23,124 +23,142 @@
                 </div>
                 <div class="col-xs-12 col-sm-4 text-center">
                     <div class="right-side">
+                        <div class="date-custom">
+                            <p>
+                                <a href="javascript:void(0);">
+                                    <span>
+                                        <i class="glyphicon glyphicon-calendar"></i>
+                                        <b>Ponedeljak</b>
+                                        <em>10.04.2016.</em>
+                                        <i class="glyphicon glyphicon-chevron-down"></i>
+                                    </span>
+                                </a>
+                                <input calendar type="text" id="datepicker" />
+                                <!-- <input type="text" id="datepicker" disabled="" > -->
+                            </p>
+                        </div>
+
                         <div class="row">
                             <div class="col-xs-12">
+                                <ul class="reservations">
+
+                                    <!-- <div class="panel-group" id="accordion">
+                                        <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+                                          <div class="panel-heading">
+                                            <h4 class="panel-title">
+                                                <p>
+                                                    21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
+                                                  <span class="text-right">REZERVISANO<span>
+                                                </p>
+                                              Pera Peric 22
+                                            </h4>
+                                          </div>
+                                          <div id="collapse1" class="collapsed panel-collapse collapse">
+                                            <div class="panel-body">
+                                                <label>Telefon: </label> 0641234567
+                                                <br/>
+                                                <label>Email: </label> pera.peric@gmail.com
+                                            </div>
+                                          </div>
+                                        </div>
+                                        <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+                                          <div class="panel-heading">
+                                              <h4 class="panel-title">
+                                                  <p>
+                                                      21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
+                                                    <span class="text-right">REZERVISANO<span>
+                                                  </p>
+                                                Pera Peric 22
+                                              </h4>
+                                          </div>
+                                          <div id="collapse2" class="collapsed panel-collapse collapse">
+                                              <div class="panel-body">
+                                                  <label>Telefon: </label> 0641234567
+                                                  <br/>
+                                                  <label>Email: </label> pera.peric@gmail.com
+                                              </div>
+                                          </div>
+                                        </div>
+                                        <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+                                          <div class="panel-heading">
+                                              <h4 class="panel-title">
+                                                  <p>
+                                                      21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
+                                                    <span class="text-right">REZERVISANO<span>
+                                                  </p>
+                                                Pera Peric 22
+                                              </h4>
+                                          </div>
+                                          <div id="collapse3" class="collapsed panel-collapse collapse">
+                                              <div class="panel-body">
+                                                  <label>Telefon: </label> 0641234567
+                                                  <br/>
+                                                  <label>Email: </label> pera.peric@gmail.com
+                                              </div>
+                                          </div>
+                                        </div>
+                                        <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse4">
+                                          <div class="panel-heading">
+                                              <h4 class="panel-title">
+                                                  <p>
+                                                      21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
+                                                    <span class="text-right">REZERVISANO<span>
+                                                  </p>
+                                                Pera Peric 22
+                                              </h4>
+                                          </div>
+                                          <div id="collapse4" class="panel-collapse collapse">
+                                              <div class="panel-body">
+                                                  <label>Telefon: </label> 0641234567
+                                                  <br/>
+                                                  <label>Email: </label> pera.peric@gmail.com
+                                              </div>
+                                          </div>
+                                        </div>
+                                        <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse5">
+                                          <div class="panel-heading">
+                                              <h4 class="panel-title">
+                                                  <p>
+                                                      21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
+                                                    <span class="text-right">REZERVISANO<span>
+                                                  </p>
+                                                Pera Peric 22
+                                              </h4>
+                                          </div>
+                                          <div id="collapse5" class="panel-collapse collapse">
+                                              <div class="panel-body">
+                                                  <label>Telefon: </label> 0641234567
+                                                  <br/>
+                                                  <label>Email: </label> pera.peric@gmail.com
+                                              </div>
+                                          </div>
+                                        </div>
+                                        <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse6">
+                                          <div class="panel-heading">
+                                              <h4 class="panel-title">
+                                                  <p>
+                                                      21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
+                                                    <span class="text-right">REZERVISANO<span>
+                                                  </p>
+                                                Pera Peric 22
+                                              </h4>
+                                          </div>
+                                          <div id="collapse6" class="panel-collapse collapse">
+                                              <div class="panel-body">
+                                                  <label>Telefon: </label> 0641234567
+                                                  <br/>
+                                                  <label>Email: </label> pera.peric@gmail.com
+                                              </div>
+                                          </div>
+                                        </div>
+                                    </div> -->
+                                </ul>
                             </div>
                         </div>
                     </div>
                 </div>
 
 
-            <div class="panel-group" id="accordion">
-                <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-                  <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <p>
-                            21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
-                          <span class="text-right">REZERVISANO<span>
-                        </p>
-                      Pera Peric 22
-                    </h4>
-                  </div>
-                  <div id="collapse1" class="collapsed panel-collapse collapse">
-                    <div class="panel-body">
-                        <label>Telefon: </label> 0641234567
-                        <br/>
-                        <label>Email: </label> pera.peric@gmail.com
-                    </div>
-                  </div>
-                </div>
-                <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse2">
-                  <div class="panel-heading">
-                      <h4 class="panel-title">
-                          <p>
-                              21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
-                            <span class="text-right">REZERVISANO<span>
-                          </p>
-                        Pera Peric 22
-                      </h4>
-                  </div>
-                  <div id="collapse2" class="collapsed panel-collapse collapse">
-                      <div class="panel-body">
-                          <label>Telefon: </label> 0641234567
-                          <br/>
-                          <label>Email: </label> pera.peric@gmail.com
-                      </div>
-                  </div>
-                </div>
-                <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse3">
-                  <div class="panel-heading">
-                      <h4 class="panel-title">
-                          <p>
-                              21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
-                            <span class="text-right">REZERVISANO<span>
-                          </p>
-                        Pera Peric 22
-                      </h4>
-                  </div>
-                  <div id="collapse3" class="collapsed panel-collapse collapse">
-                      <div class="panel-body">
-                          <label>Telefon: </label> 0641234567
-                          <br/>
-                          <label>Email: </label> pera.peric@gmail.com
-                      </div>
-                  </div>
-                </div>
-                <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse4">
-                  <div class="panel-heading">
-                      <h4 class="panel-title">
-                          <p>
-                              21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
-                            <span class="text-right">REZERVISANO<span>
-                          </p>
-                        Pera Peric 22
-                      </h4>
-                  </div>
-                  <div id="collapse4" class="panel-collapse collapse">
-                      <div class="panel-body">
-                          <label>Telefon: </label> 0641234567
-                          <br/>
-                          <label>Email: </label> pera.peric@gmail.com
-                      </div>
-                  </div>
-                </div>
-                <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse5">
-                  <div class="panel-heading">
-                      <h4 class="panel-title">
-                          <p>
-                              21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
-                            <span class="text-right">REZERVISANO<span>
-                          </p>
-                        Pera Peric 22
-                      </h4>
-                  </div>
-                  <div id="collapse5" class="panel-collapse collapse">
-                      <div class="panel-body">
-                          <label>Telefon: </label> 0641234567
-                          <br/>
-                          <label>Email: </label> pera.peric@gmail.com
-                      </div>
-                  </div>
-                </div>
-                <div class="panel panel-default" data-toggle="collapse" data-parent="#accordion" href="#collapse6">
-                  <div class="panel-heading">
-                      <h4 class="panel-title">
-                          <p>
-                              21:00 - 23:00 <span class="glyphicon glyphicon-user">3</span>
-                            <span class="text-right">REZERVISANO<span>
-                          </p>
-                        Pera Peric 22
-                      </h4>
-                  </div>
-                  <div id="collapse6" class="panel-collapse collapse">
-                      <div class="panel-body">
-                          <label>Telefon: </label> 0641234567
-                          <br/>
-                          <label>Email: </label> pera.peric@gmail.com
-                      </div>
-                  </div>
-                </div>
-            </div>
 
             <div data-ng-repeat="tab in tables | unique: 'label'">
                 <div id="{{tab.label}}-div" draggable-table on-resize="scaleIntervals($evt, $ui)" on-resizestop="saveDimensions($evt, $ui)" on-dragstop="savePosition($evt, $ui)"
