--- a/frontend/app/styles/main.css
+++ b/frontend/app/styles/main.css
@@ -104,3 +104,49 @@ aside {
 .login-div {
     margin-top: 100px;
 }
+
+date-custom p {
+    padding: 15px 15px 5px 15px;
+    text-align: left;
+    border-bottom: 1px solid #DDD;
+    margin-bottom: 0;
+}
+.date-custom p a {
+    color: #1F1F1F;
+}
+.date-custom span {
+    float: left;
+    font-size: 26px;
+    width: 100%;
+    position: relative;
+    margin-bottom: 10px
+}
+.date-custom span b {
+    display: block;
+    line-height: 1.1em;
+    padding-bottom: 5px;
+}
+.date-custom span i.glyphicon-calendar {
+    color: #CFD4D8;
+    margin-right: 10px;
+    font-size: 50px;
+    float: left;
+}
+.date-custom em {
+    font-size: 14px;
+    display: block;
+    color: #BBB;
+}
+.date-custom input {
+    display: block;
+    width: 1px;
+    border: 0 none;
+    height: 0px;
+    outline: none;
+}
+.date-custom span i.glyphicon-chevron-down {
+    font-size: 12px;
+    top: 10px;
+    right: 0;
+    position: absolute;
+}
