Ispis pravih podataka o rezervacijama za odredjeni datum

--- a/frontend/app/styles/main.css
+++ b/frontend/app/styles/main.css
@@ -224,6 +224,7 @@ span.slide b {
     border-radius: 3px;
     font-size: 12px;
     margin-top: 10px;
+    margin-left: 5px;
 }
 
 .form-placeholder {
