--- a/frontend/app/views/reservations.html
+++ b/frontend/app/views/reservations.html
@@ -21,3 +21,4 @@
             </span>
     </li>
 </ul>
+<p class="res-msg" data-ng-if="!reservations || reservations.length == 0">Nema rezervacija za izabrani datum.</p>
