--- a/frontend/app/views/newreservation.html
+++ b/frontend/app/views/newreservation.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <form role="form" style="width:40%;margin-top:70px;">
+    <form role="form" class="new-reservation">
         <div class="form-group">
             <input type="text" class="form-control" id="name" placeholder="Ime">
         </div>
@@ -23,24 +23,28 @@
             </select>
         </div>
         <div class="form-group">
-            <label for="from" style="margin-right:5px;">OD</label>
-                    <select class="form-control" style="display:inline;width:40%;margin-left:4px;">
-                        <option>14:00</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
-                    </select>
-            <label for="to"style="margin-left:22px;margin-right:5px;">DO</label>
-                <select class="form-control" style="display:inline;width:40%;">
+            <span style="margin-right:5px;">
+                <label for="from" style="text-align:left;">OD</label>
+                <select class="form-control" style="display:inline-block;width:30%;margin-left:4px;">
+                    <option>14:00</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                </select>
+            </span>
+            <span style="margin-left:5px">
+                <label for="to" style="text-align:left;">DO</label>
+                <select class="form-control" style="display:inline-block;width:30%;">
                     <option>16:00</option>
                     <option>2</option>
                     <option>3</option>
                     <option>4</option>
                     <option>5</option>
                 </select>
+            </span>
         </div>
-        <div class="form-group">
+        <div class="form-group" style="text-align:left;">
             <label for="from">STO</label>
             <input type="text" class="form-control" id="tables" placeholder="Sto">
         </div>
