--- a/frontend/app/views/newreservation.html
+++ b/frontend/app/views/newreservation.html
@@ -51,7 +51,7 @@
         <div class="form-group">
             <textarea class="form-control" rows="3"placeholder="Komentar"></textarea>
         </div>
-        <button type="button" class="btn btn-default" style="margin-right:6px;">Otkaži</button>
-        <button type="submit" class="btn btn-primary">Sačuvaj</button>
+        <a class="btn btn-default" style="margin-right:6px;" href="#/home/" ui-sref="home.reservations">Otkaži</a>
+        <a style="margin-right:6px;" href="#/home/" ui-sref="home.reservations"><button type="submit" class="btn btn-primary">Sačuvaj</button></a>
     </form>
 </div>
