--- a/frontend/app/styles/main.css
+++ b/frontend/app/styles/main.css
@@ -46,13 +46,14 @@
     margin: 0 !important;
 }
 .breadcrumb li a {
-    color: #BBB;
+    color: #555;
     font-size: 16px;
     display: block;
     padding: 15px 15px 0 15px;
     line-height: 1em;
     margin: -14px 0 0 0;
     line-height: 80px;
+    text-decoration: none;
 }
 .breadcrumb li a:hover {
     text-decoration: none;
@@ -63,7 +64,7 @@
     font-size: 30px;
     font-weight: bold;
     padding: 5px 30px 0 0;
-    background: url("../img/arrow-r.png") right 37px  no-repeat;
+    background: url("../images/arrow-r.png") right 37px  no-repeat;
     display: block;
     margin: 0;
 }
@@ -73,7 +74,7 @@
 }
 .breadcrumb li.active a {
     color: #F3AF1E;
-    background: url("../img/arrow-up.png") bottom center no-repeat;
+    background: url("../images/arrow-up.png") bottom center no-repeat;
 }
 .main-button {
     background: #F3AF1E;
